<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fixposition_orientation</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="487844521@qq.com">runze</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nmea_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>pix_hooke_driver_msgs</exec_depend>
  <exec_depend>autoware_sensing_msgs</exec_depend>
  <exec_depend>fixposition_driver_ros2</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

  <exec_depend>ament_cmake</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <build_depend>ament_cmake</build_depend>
  <build_depend>ament_index_python</build_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_index_python</buildtool_depend>
</package>
